# mlibc

./: meson.build
abis/hydrogen/: access.h  auxv.h  blkcnt_t.h  blksize_t.h  clockid_t.h  dev_t.h  errno.h  fcntl.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  in.h  ino_t.h  ioctls.h  ipc.h  limits.h  mode_t.h  mqueue.h  msg.h  nlink_t.h  pid_t.h  poll.h  resource.h  rlim_t.h  seek-whence.h  shm.h  sigevent.h  signal.h  sigval.h  socket.h  socklen_t.h  stat.h  statvfs.h  suseconds_t.h  termios.h  uid_t.h  utsname.h  vm-flags.h  wait.h
options/elf/include/: elf.h
options/rtld/aarch64/: elf.hpp
options/rtld/generic/: linker.cpp  linker.hpp  main.cpp
options/rtld/loongarch64/: elf.hpp
options/rtld/m68k/: elf.hpp
options/rtld/riscv64/: elf.hpp
options/rtld/x86/: elf.hpp
options/rtld/x86_64/: elf.hpp  entry.S
sysdeps/hydrogen/: meson.build
sysdeps/hydrogen/generic/: entry.cpp  meson.build  sysdeps.cpp
sysdeps/hydrogen/include/: abi-bits  meson.build
sysdeps/hydrogen/include/sys/: sysmacros.h
sysdeps/hydrogen/x86_64/: Scrt1.S  crt1.S  gcrt1.S  meson.build  rcrt1.S  sysdeps.S  sysdeps.cpp
