if no_headers
    subdir_done()
endif

install_headers(
    'abi-bits/access.h',
    'abi-bits/auxv.h',
    'abi-bits/blkcnt_t.h',
    'abi-bits/blksize_t.h',
    'abi-bits/clockid_t.h',
    'abi-bits/dev_t.h',
    'abi-bits/errno.h',
    'abi-bits/fcntl.h',
    'abi-bits/fsblkcnt_t.h',
    'abi-bits/fsfilcnt_t.h',
    'abi-bits/gid_t.h',
    'abi-bits/in.h',
    'abi-bits/ino_t.h',
    'abi-bits/ioctls.h',
    'abi-bits/ipc.h',
    'abi-bits/limits.h',
    'abi-bits/mode_t.h',
    'abi-bits/mqueue.h',
    'abi-bits/msg.h',
    'abi-bits/nlink_t.h',
    'abi-bits/packet.h',
    'abi-bits/pid_t.h',
    'abi-bits/poll.h',
    'abi-bits/resource.h',
    'abi-bits/rlim_t.h',
    'abi-bits/seek-whence.h',
    'abi-bits/shm.h',
    'abi-bits/sigevent.h',
    'abi-bits/signal.h',
    'abi-bits/sigval.h',
    'abi-bits/socket.h',
    'abi-bits/socklen_t.h',
    'abi-bits/stat.h',
    'abi-bits/statvfs.h',
    'abi-bits/suseconds_t.h',
    'abi-bits/termios.h',
    'abi-bits/time.h',
    'abi-bits/uid_t.h',
    'abi-bits/utsname.h',
    'abi-bits/vm-flags.h',
    'abi-bits/wait.h',
    'sys/sysmacros.h',
    follow_symlinks: true,
    preserve_path: true,
)
